# cwru_baxter

baxter_traj_streamer/src/: baxter_traj_streamer.cpp  traj_action_client.cpp
rethink_traj_streamer/: CMakeLists.txt  package.xml
rethink_traj_streamer/include/rethink_traj_streamer/: baxter_traj_client.h
rethink_traj_streamer/src/: baxter_traj_client.cpp  test_client.cpp
