<?xml version="1.0"?>
<package>
  <name>rethink_traj_streamer</name>
  <version>0.0.0</version>
  <description>Package to act as an example action client in CPP for Rethink's joint traj server</description>

  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>